# inertia-django

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  pytest.yml  ruff.yml
docs/: CNAME  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/guide/: client-side-setup.md  code-splitting.md  how-it-works.md  index.md  links.md  partial-reloads.md  scroll-management.md  server-side-setup.md  who-is-it-for.md
docs/scripts/: extract-docs.js
inertia/: __init__.py  helpers.py  http.py  middleware.py  prop_classes.py  settings.py  share.py  test.py  utils.py  validation.py  views.py
inertia/templates/: inertia.html  inertia_ssr.html
inertia/tests/: settings.py  test_encoder.py  test_history.py  test_middleware.py  test_rendering.py  test_settings.py  test_ssr.py  test_tests.py
inertia/tests/testapp/: apps.py  forms.py  layout.html  models.py  urls.py  views.py
